# google-test-coverage-demo

./: CMakeLists.txt  README.md  Vagrantfile  provision.sh
src/: CMakeLists.txt  math_operations.cpp  math_operations.h
tests/: CMakeLists.txt  math_operations_test.cpp
